# capla_extractor

./: Cargo.toml  README.md  dune
examples/: extraction.v  float_incr.b  float_operations.b  mixed_args.b  modular_exp.b  sha256.b  test_main_float.c  test_main_mod.c  test_main_sha256.c
src/: codegen.rs  lib.rs  main.rs  parser.rs  tui.rs
