[package]
name = "capla_extractor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]
name = "capla_extractor"
path = "src/lib.rs"

[[bin]]
name = "capla_extractor"
path = "src/main.rs"

[dependencies]
chumsky = { version = "0.12.0" }
ratatui = "0.30.0"
crossterm = "0.29.0"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
glob = "0.3"
ocaml-interop = "0.12.0"

